fix доработка 3го этапа по результатам 1го ревью